@@ -214,8 +214,11 @@
 	* Moved syd(8) from 'noinst' to 'sbin' in 'tests/Makefile.am'.
 	* Modified to 'make rpm' target in 'Makefile.am' to use a home
 	directory based RPM build tree.
-2015-01-28 Fred Gleason <fredg@paravelsystems.com>
+2015-02-28 Fred Gleason <fredg@paravelsystems.com>
 	* Moved syd(8) from 'sbin' to 'noinst' in 'tests/Makefile.am'.
 	* Fixed a bug in 'sy/syrtp_server.cpp' that caused RTP subscriptions
 	to not be made if no source slots were configured.
 	* Added sycapture(8) in 'tests/sycapture.cpp' and 'test/sycapture.h'.
+2015-03-01 Fred Gleason <fredg@paravelsystems.com>
+	* Refactored SyAdvServer' to transmit advertising updates correctly
+	in 'sy/syadv_server.cpp' and 'sy/syadv_server.h'.
